# rainbows

./: Cargo.toml  Readme.md
data/: Daimon-19.0C.csv  Martonchik-liquid-90K.csv
src/: attempt_01.rs  attempt_02.rs  attempt_03.rs  colorspace.rs  colour_system.rs  main.rs  math_helpers.rs
