[package]
name = "rainbows"
version = "0.1.0"
authors = ["Igor null <m1el.2027@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
image = "0.23.12"
palette = "0.4.1"
rand = "0.7.2"
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
